# MyCompiler

./: CMakeLists.txt  main.cpp
SLR1/: SLR1Analyzer.cpp  SLR1Analyzer.h  SynParser.cpp  SynParser.h
grammar/: test1.txt  test2.txt  test3.txt  test5.txt
lexical analysis/: analysis.cpp  analysis.h  keyword.h
testcode/: test1.txt
